# AmazonDataControl

./: README.md  amazon_review_analysis_20250605_202919.json  amazon_review_analysis_20250605_204100.json  analysis_summary_report.txt  comprehensive_analysis_example.py  example.py  pyproject.toml  sample_reviews.json  visualization_demo.py
src/adc/: models.py
src/adc/analysis/: __init__.py  comprehensive_analyzer.py  product_analyzer.py  temporal_analyzer.py  user_behavior_analyzer.py  visualizer.py
src/adc/generation/: score_generator.py
