[project]
name = "AmazonDataControl"
version = "0.1.0"
description = "A tool for generating amazon data"
authors = [
    {name = "Mathias Oliver Valdbjørn Rønnelund", email = "mathiasoliverjorgensen@hotmail.com"},
]
dependencies = [
    "pydantic>=2.11.5",
    "pymc>=5.23.0",
    "numpy>=2.2.6",
    "scipy>=1.15.3",
    "faker>=37.3.0",
    "seaborn>=0.13.2",
]
requires-python = "==3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
